Fix imageContainer to display image always covering the needed space

--- a/src/CSS/main.scss
+++ b/src/CSS/main.scss
@@ -76,3 +76,10 @@ h6 {
     }
   }
 }
+
+@media (min-width: $media_computer_large) {
+  .explore-section {
+    min-height: auto;
+    margin: 13rem 2rem;
+  }
+}
